fix label in home template, modify truncatewords in home template, modify jumbotron text color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
 body { font-family: 'Open Sans Condensed', sans-serif; background: url('') center center;}
 .container { background: white; }
 #logo { font-family: 'Press Start 2P', 'Helvetica', cursive; }
+.jumbotron { color: #888; }
